--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node server.ts",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.ts"
+    "start": "NODE_ENV=production node server.ts -p $PORT"
   },
   "keywords": [],
   "author": "",
