--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.ts",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.ts -p $PORT"
+    "start": "NODE_ENV=production node server.js -p $PORT"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@google/maps": "^0.5.5",
     "@types/next": "^8.0.5",
+    "@types/node": "^12.0.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/reactstrap": "^8.0.1",
@@ -28,5 +35,11 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "reactstrap": "^8.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5"
   }
 }
